# MAXINE-AR-SDK

./: CHANGELOG  CMakeLists.txt  LICENSE  README.MD  rosdi ab latiff  version.h
nvar/include/: nvAR.h  nvAR_defs.h  nvCVImage.h  nvCVStatus.h  nvTransferD3D.h  nvTransferD3D11.h
nvar/src/: VPIProxy.cpp  nvARProxy.cpp  nvCVImageProxy.cpp
samples/: CMakeLists.txt
samples/BodyTrack/: BodyEngine.cpp  BodyEngine.h  BodyTrack.cpp  CMakeLists.txt  Readme.txt  run.bat
samples/ExpressionApp/: CMakeLists.txt  DirectoryIterator.cpp  DirectoryIterator.h  ExpressionApp.cpp  ExpressionAppUI.cpp  ExpressionAppUI.h  MeshRenderer.cpp  MeshRenderer.h  Readme.txt  run.bat
samples/ExpressionApp/BackEndOpenGL/: FaceIO.cpp  FaceIO.h  GLMaterial.cpp  GLMaterial.h  GLMesh.cpp  GLMesh.h  GLShaders.cpp  GLShaders.h  GLSpectrum.h  OpenGLMeshRenderer.cpp  OpenGLMeshRenderer.h  SimpleFaceModel.h
samples/FaceTrack/: CMakeLists.txt  FaceEngine.cpp  FaceEngine.h  FaceTrack.cpp  Readme.txt  run.bat
samples/GazeRedirect/: CMakeLists.txt  GazeEngine.cpp  GazeEngine.h  GazeRedirect.cpp  Readme.txt  run.bat
samples/utils/: FeatureVertexName.cpp  FeatureVertexName.h  RenderingUtils.cpp  RenderingUtils.h  nvCVOpenCV.h
